--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -433,14 +433,14 @@
                 android:order="1"
                 android:title="@string/contacts_name" />
             <fr.neamar.kiss.preference.SwitchPreference
-                android:defaultValue="true"
+                android:defaultValue="false"
                 android:key="enable-settings"
                 android:order="2"
                 android:title="@string/settings_name" />
             <!-- Enable shortcuts switch is added here dynamically (order 3) -->
             <!-- ResetShortcutsPreference is added here dynamically (order 5) -->
             <fr.neamar.kiss.preference.SwitchPreference
-                android:defaultValue="true"
+                android:defaultValue="false"
                 android:key="enable-search"
                 android:order="6"
                 android:title="@string/search_provider_toggle" />
