--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,8 @@
         android:id="@+id/preferences"
         android:icon="@drawable/ic_launcher"
         android:showAsAction="ifRoom|withText"
-        android:title="@string/activity_setting" />
+        android:title="@string/activity_setting"
+        android:visible="false" />
     <item
         android:id="@+id/wallpaper"
         android:showAsAction="never"
@@ -16,6 +17,7 @@
     <item
         android:id="@+id/settings"
         android:showAsAction="never"
-        android:title="@string/menu_settings" />
+        android:title="@string/menu_settings"
+        android:visible="false" />
 
 </menu>
