--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -11,7 +11,7 @@
                 <solid android:color="@android:color/transparent" />
                 <stroke
                     android:width="2dp"
-                    android:color="@color/kiss_green" />
+                    android:color="@color/mind_purple" />
                 <corners android:radius="24dp" />
             </shape>
         </item>
