--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <style name="BaseThemeLight" parent="@android:style/Theme.Material.Light.NoActionBar">
-        <item name="android:colorPrimary">@color/kiss_green</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green</item>
-        <item name="android:colorAccent">@color/kiss_green</item>
+        <item name="android:colorPrimary">@color/mind_purple</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple</item>
+        <item name="android:colorAccent">@color/mind_purple</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="appSelectableItemBackground">?android:attr/selectableItemBackgroundBorderless
         </item>
@@ -14,9 +14,9 @@
     </style>
 
     <style name="BaseThemeDark" parent="@android:style/Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@color/kiss_green</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green</item>
-        <item name="android:colorAccent">@color/kiss_green</item>
+        <item name="android:colorPrimary">@color/mind_purple</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple</item>
+        <item name="android:colorAccent">@color/mind_purple</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="appSelectableItemBackground">?android:attr/selectableItemBackgroundBorderless
         </item>
@@ -37,7 +37,7 @@
         <item name="listBackgroundColor">@color/kiss_background_light_transparent</item>
         <item name="searchBackgroundColor">@color/kiss_background_light_transparent</item>
         <item name="dividerDrawable">@null</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green_semitransparent</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple_semitransparent</item>
         <item name="textShadowRadius">3</item>
     </style>
 
@@ -47,7 +47,7 @@
         <item name="listBackgroundColor">@color/kiss_background_dark_transparent</item>
         <item name="searchBackgroundColor">@color/kiss_background_dark_transparent</item>
         <item name="dividerDrawable">@null</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green_semitransparent</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple_semitransparent</item>
         <item name="textShadowRadius">3</item>
     </style>
 
@@ -143,7 +143,7 @@
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowBackground">@color/kiss_background</item>
         <item name="android:textColorSecondary">#7f7f7f</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple</item>
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:navigationBarColor">@android:color/black</item>
     </style>
@@ -154,7 +154,7 @@
         <item name="android:windowActionBar">true</item>
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowBackground">@color/kiss_list_background_inverse</item>
-        <item name="android:colorPrimaryDark">@color/kiss_green</item>
+        <item name="android:colorPrimaryDark">@color/mind_purple</item>
         <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
